[package]
name = "todo-timer"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@plugintheworld.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.7"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }
