[package]
name = "todo-timer"
version = "0.1.0"
authors = ["Germain Wessely <germain.wessely@plugintheworld.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.0"
tui = { version = "0.12.0", default-features = false, features = ['crossterm'] }
serde = { version = "1.0.116", features = ["derive"] }
toml = "0.5"
chrono = { version = "0.4.18", features = ["serde"] }